{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Controls",
            "id": "e052712a-1fb1-4c8b-94a4-da77ca382404",
            "actions": [
                {
                    "name": "LeftStick",
                    "type": "Value",
                    "id": "a2e4c0e0-9787-4af9-a05b-b30cf52e0eeb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightStick",
                    "type": "Value",
                    "id": "2b84373a-ddf2-4f9f-b5c8-b2fae40337d2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "417a7f42-aad4-4545-baad-df39cf30b9d5",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24e839f7-6b18-426c-bceb-5d7ebfeb3a1e",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}